--- a/custom.css
+++ b/custom.css
@@ -1,4 +1,3 @@
-
 .webix_view.webix_dtable.default-datagrid-colors .webix_ss_header .webix_hs_center [class*="webix_ss_sort"]::before {
     box-shadow: 0 0 1px 1px #d2e3ef;
 }
@@ -43,4 +42,6 @@
     outline: none;
 }
 
-div.webix_ss_header > div.webix_hs_center > div > div:nth-child(2) > div > div{display:none;}
+div.webix_ss_header > div.webix_hs_center > div > div:nth-child(2) > div > div {
+    display:none;
+}
